fix Z-Index on mobile gallery modals and filter buttons

--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -129,7 +129,7 @@
     width: 30px;
     height: 30px;
     cursor: pointer;
-    z-index: 10;
+    z-index: 1;
   }
   .filter-menu__btn > span,
   .filter-menu__btn > span::before,
@@ -186,6 +186,7 @@
     left: -200%;
     margin: 0;
     opacity: 0;
+    z-index: -1;
   }
   #filter-menu__toggle:checked ~ .filter-viewer-container {
     top: 0;
@@ -196,6 +197,7 @@
     background-color: #1d2122;
     opacity: 1;
     transition: opacity 250ms;
+    z-index: 10;
   }
 
   #filter-menu__toggle:checked ~ .filter-viewer-container .filter-viewer{
